deploy/blog-tomcat-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-tomcat-1
  namespace: production
  labels:
    app: blog-tomcat
    instance: blog-tomcat-1
spec:
  replicas: 1
  selector:
    matchLabels:
      instance: blog-tomcat-1
  template:
    metadata:
      labels:
        app: blog-tomcat
        instance: blog-tomcat-1
    spec:
      containers:
      - name: blog-tomcat-1
        image: 172.31.9.101:5000/blog-tomcat:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-tomcat-2
  namespace: production
  labels:
    app: blog-tomcat
    instance: blog-tomcat-2
spec:
  replicas: 1
  selector:
    matchLabels:
      instance: blog-tomcat-2
  template:
    metadata:
      labels:
        app: blog-tomcat
        instance: blog-tomcat-2
    spec:
      containers:
      - name: blog-tomcat-2
        image: 172.31.9.101:5000/blog-tomcat:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-tomcat-3
  namespace: production
  labels:
    app: blog-tomcat
    instance: blog-tomcat-3
spec:
  replicas: 1
  selector:
    matchLabels:
      instance: blog-tomcat-3
  template:
    metadata:
      labels:
        app: blog-tomcat
        instance: blog-tomcat-3
    spec:
      containers:
      - name: blog-tomcat-3
        image: 172.31.9.101:5000/blog-tomcat:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
