deploy/blog-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-db
  namespace: production
  labels:
    app.kubernetes.io/name: mysql
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/component: primary
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
