deploy/blog-tomcat-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-tomcat
  namespace: production
spec:
  selector:
    app: blog-tomcat
  ports:
    - port: 8080
      targetPort: 8080
