deploy/blog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - blog.ydata.co.kr
    secretName: blog-tls
  rules:
  - host: blog.ydata.co.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog-tomcat
            port:
              number: 8080
